# molbuilder

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-runtime.txt
docs/: design.md
docs/spec/: README.md  builders.md  chemistry.md  cli.md  parsers.md  pyscf-script.md  siesta-fdf.md  structure.md  watch-api.md  watch-ui.md  web-api.md
molbuilder/: __init__.py  _molwatch_log.py  chemistry.py  cli.py  frame.py  issues.py  nucleic.py  peptide.py  pubchem.py  pyscf_input.py  residues.py  siesta.py  smiles.py  structure.py  validation.py
molbuilder/backends/: __init__.py  _amber.py  _common.py  _rdkit.py  _threedna.py
molbuilder/builders/: __init__.py
molbuilder/builders/backends/: __init__.py  _amber.py  _common.py  _rdkit.py  _threedna.py
molbuilder/config/: __init__.py  pyscf.py  siesta.py
molbuilder/molwatch_log/: __init__.py  format.py
molbuilder/parsers/: __init__.py  base.py  molwatch_log.py  pyscf.py  siesta.py
molbuilder/pyscf/: __init__.py  input.py
molbuilder/siesta/: __init__.py  input.py
molbuilder/trajectory_log/: __init__.py  emitter.py  format.py
molbuilder/web/: __init__.py  app.py
molbuilder/web/blueprints/: __init__.py  build.py  watch.py
molbuilder/web/static/: style.css  viewer.js
molbuilder/web/static/lib/: mol-style.js
molbuilder/web/static/watch/: style.css  viewer.js
molbuilder/web/templates/: index.html  watch.html
tests/: conftest.py  test_backends.py  test_chemistry.py  test_cli.py  test_frame.py  test_load.py  test_molwatch_emitter.py  test_molwatch_preview.py  test_nucleic.py  test_output_correctness.py  test_pdb_ter.py  test_peptide.py  test_pubchem.py  test_pyscf.py  test_pyscf_smoke.py  test_pyscf_spec.py  test_residues.py  test_review_fixes.py  test_science_gaps.py  test_smiles_and_siesta.py  test_structure.py  test_validation.py  test_web.py
tests/watch/: test_api_load.py  test_app_concurrency.py  test_molwatch_log_parser.py  test_pyscf_parser.py  test_registry.py  test_siesta_parser.py
