[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molbuilder"
version = "0.3.0"
description = "Build 3-D molecules from sequences / SMILES / names; emit SIESTA / PySCF / ASE input."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Quan Qing", email = "qqing@asu.edu" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.24",
    "ase>=3.22",                 # XYZ I/O + atomic-number table for siesta module
    "PeptideBuilder>=1.1",       # peptide backbone geometry
    "biopython>=1.81",           # required by PeptideBuilder
    "flask>=3.0",                # bundled web UI (build + watch); core post-merge
    "click>=8.1",                # CLI plumbing for `molbuilder ...` subcommands
]

[project.optional-dependencies]
# Hydrogen addition on peptides + SMILES building
rdkit = ["rdkit>=2023.9"]

# Common-name lookup
name = ["pubchempy>=1.0"]

# Browser UI -- kept for back-compat; flask is now in core dependencies
# above, so `pip install molbuilder` already pulls it in.
web = ["flask>=3.0"]

# Test runner + static-analysis tools.  Install with:
#     pip install -e ".[test]"
test = [
    "pytest>=7",
    "pyflakes>=3",
]

# Tools needed to *execute* the SIESTA / PySCF input files molbuilder
# generates -- as opposed to building structures with molbuilder itself.
# Mirrors requirements-runtime.txt so either workflow works:
#     pip install -e ".[runtime]"
#     pip install -r requirements-runtime.txt
# Note: SIESTA (Fortran), AmberTools (tleap), and 3DNA are NOT
# pip-installable -- see requirements-runtime.txt header for conda /
# manual install instructions.
runtime = [
    "pyscf>=2.4",
    "geometric>=1.0",
    "pyberny>=0.6",
    "pyscf-dispersion>=1.0",
    "sisl>=0.14",
]

# Everything molbuilder itself can use (build-time deps only).
all = [
    "rdkit>=2023.9",
    "pubchempy>=1.0",
    "flask>=3.0",
]

# Build-time + runtime in one go.
full = [
    "rdkit>=2023.9",
    "pubchempy>=1.0",
    "flask>=3.0",
    "pyscf>=2.4",
    "geometric>=1.0",
    "pyberny>=0.6",
    "pyscf-dispersion>=1.0",
    "sisl>=0.14",
]

[project.scripts]
molbuilder = "molbuilder.cli:main"
# Back-compat shim: pre-merge users had a separate `molwatch` console
# script.  After the merge, `molbuilder watch serve` is the canonical
# entry point; `molwatch` is a thin wrapper that calls the same code.
molwatch   = "molbuilder.cli:_run_watch_serve_entrypoint"

[tool.setuptools.packages.find]
include = ["molbuilder*"]

[tool.setuptools.package-data]
molbuilder = [
    "web/templates/*.html",
    "web/static/*.css", "web/static/*.js",
    "web/static/watch/*.css", "web/static/watch/*.js",
]

[tool.pytest.ini_options]
# pythonpath lets pytest import the in-tree molbuilder/ package without
# requiring `pip install -e .` first.  testpaths keeps `pytest` (no args)
# scoped to the tests/ folder.
minversion   = "7.0"
testpaths    = ["tests"]
pythonpath   = ["."]
addopts      = "-ra"
markers      = [
    "smoke: end-to-end smoke tests that subprocess-run a generated script (slow; require pyscf)",
]
